setup complete connection avec le frontend

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,10 @@ spring.jpa.show-sql: true
 spring.jpa.properties.hibernate.format_sql=true
 server.port=9190
 logging.level.org.springframework.security=DEBUG
+
+spring.security.cors.configurationSource.allowedOrigins=http://localhost:3000
+spring.security.cors.configurationSource.allowedMethods=*
+spring.security.cors.configurationSource.allowedHeaders=*
+spring.security.cors.configurationSource.allowCredentials=true
+spring.security.cors.configurationSource.exposedHeaders=Authorization
+spring.security.cors.configurationSource.maxAge=3600
